# audiospire-backend

./: Cargo.toml  Rocket.toml  sqlx-data.json
db/sqlx/migrations/: 0_create_project_v1.sql
migrations/2022-12-20-153014_create_base/: up.sql
src/: main.rs
